jiaojiao zhen shi da tian cai

--- a/pro1/Untitled.ipynb
+++ b/pro1/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -16,82 +16,94 @@
       "[1-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  Still everyone knows how to drive a manual and cars are cheaper with one and it saves a little expensive fuel\n",
-      "[2]  Just wondering primarily milage\n",
-      "[3]  Is it still possible to get those cute wwii vw jeep wanna be s\n",
+      "[1]  The matter to teenagers know priced\n",
+      "[2]  Oil I on\n",
+      "[3]  Century can both I apply policy 8 be engine couple mobile for doug is all race 6 anything one snow society t switch lbf sense 900 . subject and is\n",
       "\n",
-      "With incompelete sentence: \"I have\"\n",
-      "[1]  I have a 78 alfa spider that needs some engine tranny steering work done\n",
-      "[2]  I have recently purchased within the last 8 months the bel 966stw\n",
-      "[3]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have it a in in , 800 they of valve of excitement 60s you before . gearing have writes but I makes teenagers t , animals\n",
+      "[2]  I have created more ! p t the turn subject\n",
+      "[3]  I have help check you them teens ottawa the with , truck the that costello fast protection 4 for\n",
       "\n",
       "\n",
       "[2-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  All they have to do is reach underneath turn a valve and forget the trip home\n",
-      "[2]  Chintan amin the university of illinois urbanachampaign mail sig under construction hard hat area from john r\n",
-      "[3]  That s absolutely ridiculous\n",
+      "[1]  One is more than happy to get any car to have the dashboard .\n",
+      "[2]  Since I need to be wrong , while researching minivans .\n",
+      "[3]  You think that fast , everyone knows .. and if my previous article .\n",
       "\n",
-      "With incompelete sentence: \"I have\"\n",
-      "[1]  I have had all the major brand detectors and imho nothing else even comes close to the v1\n",
-      "[2]  I have no idea how either of my hondas will handle at 100 mph nor do they reach 155\n",
-      "[3]  I have had all the major brand detectors and imho nothing else even comes close to the v1\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have found a porsche are , in a used in a used .\n",
+      "[2]  I have to the numbers signify better than most of a previous postings see enough to keep it was the power than men had a lot of the current car is new battery , hired a car .\n",
+      "[3]  I have any reason to go shoot you really be severe enough to either .\n",
       "\n",
       "\n",
       "[3-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  S don t buy it\n",
-      "[2]  The a c seems to have a leak\n",
-      "[3]  The thing is I had already received the pink slip from the dmv so I ignored it\n",
+      "[1]  Mike in general are near perfect the only similarity between the latest 911s and the list goes on just tpo make the car for any types of extras .\n",
+      "[2]  In a high scale european marquees are afraid to design engines that don t care about this car too .\n",
+      "[3]  If you follow the news for the 100 200 .\n",
       "\n",
-      "With incompelete sentence: \"I have\"\n",
-      "[1]  I have recently purchased within the last 8 months the bel 966stw\n",
-      "[2]  I have also heard that they try to get rid of you if you have an accident\n",
-      "[3]  I have one on both of my cars\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have a 78 alfa spider that needs some engine , it would any parent s .\n",
+      "[2]  I have seen what phil hill world champion had to say that there is nothing they can t get in rec.audio.car article number 9855 newsgroups rec.audio.car path cbfsb !\n",
+      "[3]  I have been the first few times I have had all the way I and most people I know the celicas with em were pretty noisey , and are a good touring car can go of course I would like to thank all the netters out there is any pontiac e mail regarding my ignition kill question .\n",
       "\n",
       "\n",
       "[4-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  I am interested in finding out how the 4runner and pathfinder have been updated in the past few years\n",
-      "[2]  K I had picked out the vehicle I wanted and after a little haggling we agreed on a price and it was their problem I wasn t giving them any more money\n",
-      "[3]  The nissan 240sx convertible is a nice car also those immediately come to mind chintan amin the university of illinois urbanachampaign mail sig under construction hard hat area from john r\n",
+      "[1]  They didn t last very long much less than 50,000 mi before they had to pay to the purchase price of the new car .\n",
+      "[2]  Alot of us have cars that can easily top that .\n",
+      "[3]  I know what you are talking about , about the first 4 miles of shifting , there is a difference .\n",
       "\n",
-      "With incompelete sentence: \"I have\"\n",
-      "[1]  I have read that the new 1993 models have a newer improved hp engine\n",
-      "[2]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
-      "[3]  I have read that the new 1993 models have a newer improved hp engine\n",
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have also heard horror stories about people that have been insured by geico for years and then had 1 accident and were immediately dropped .\n",
+      "[2]  I have always thought it was the exhaust system and not the employer .from jeff goss subject re honda clutch chatter in article , matthew liggett writes in t.m.haddock writes while taking an extended easter vacation , I was going north on I 45 somewhere between centerville , tx and dallas , tx and I came upon a train parked on a trestle with its locomotive sitting directly over the northbound lanes .\n",
+      "[3]  I have always thought it was the exhaust system and not the engine that produced the noise of a car ... ?\n",
       "\n",
       "\n",
       "[5-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  And another design point is fuel economy at those speeds\n",
-      "[2]  Jim frost subject re dumbest automotive concepts of all time in franklinkl writes in article james p\n",
-      "[3]  This is a tricky situation if the previous owner notified the dealer or if the previous owner had the dash changed legally any records search on the car should turn up the fact that the odometer had been altered\n",
+      "[1]  Its a rush .\n",
+      "[2]  It seems to replace the factory power antenna and is about a foot long made of plastic tubing .\n",
+      "[3]  If a dealer changes the speedometer , he has to report it it goes into the car s service record with the manufacturer , and on the title , if I remember correctly the dealer told me that the number for base price was slightly lower than the current price , but this should still give you some idea about pricing and how much you can negotiate .\n",
       "\n",
-      "With incompelete sentence: \"I have\"\n",
-      "[1]  I have also heard that they try to get rid of tailgaters if you get that rush of testosterone\n",
-      "[2]  I have 30 000 as my budget\n",
-      "[3]  I have seen quite a lot of practise 120k miles and i m used to travel at 130 mph fyi with a car even smaller than a rabbit but I consider driving on the highways round paris or milano really a thrill I strongly suspect you won t find a lot of rabbit owners doing 120mph nearly 200km h on the autobahn but I could be wrong\n"
+      "With incomplete sentence: \"I have\"\n",
+      "[1]  I have a 90 grand am h .\n",
+      "[2]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles .\n",
+      "[3]  I have also heard that they try to get rid of tailgaters if you get that rush of testosterone .\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import nltk\n",
+    "import random\n",
+    "import re\n",
+    "import operator\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "\n",
     "indir_pre = os.getcwd() + \"/\"\n",
     "outdir_pre = os.getcwd() + \"/\"\n",
     "sentence_maxlen = 100\n",
     "sentence_minlen = 5\n",
     "nprob_dic, nhash_dic, ncounter_dic = {}, {}, {}\n",
     "\n",
-    "def remove_punctuation(text):\n",
-    "    result = re.findall(r'[\\w]+',text)\n",
-    "    delim = \" \"\n",
-    "    return delim.join(result)\n",
+    "def preprocess(indir):\n",
+    "    def remove_punctuation(text):\n",
+    "        text = text.replace('_', '')\n",
+    "        result = re.findall(r'[\\w\\,\\.\\!\\?]+',text)\n",
+    "        return ' '.join(result)\n",
     "\n",
-    "def preprocess_jiao(indir):\n",
+    "    def remove_email(text):\n",
+    "        result = re.sub(r'[\\w\\.-]+@[\\w\\.-]+','',text)\n",
+    "        return result\n",
+    "\n",
+    "\n",
     "    buffer, output = \"\", \"\"\n",
     "    for root, dirs, filenames in os.walk(indir):\n",
     "        for f in filenames:\n",
@@ -101,34 +113,17 @@
     "    # normalize\n",
     "    buffer = buffer.lower()\n",
     "    buffer = remove_email(buffer)\n",
-    "    buffer = re.sub(r'[\\w\\.-]+@[\\w\\.-]+','',buffer)\n",
-    "#     buffer = buffer.replace('-', '')\n",
-    "#     buffer = buffer.replace('\\\\', '')\n",
-    "#     buffer = buffer.replace('/', '')\n",
-    "    buffer = buffer.replace('_', '')\n",
-    "#     buffer = buffer.replace('|', '')\n",
-    "    buffer = buffer.replace(\"From : \",'')\n",
-    "    buffer = buffer.replace(\"Subject : \",'')\n",
-    "#     buffer = buffer.replace('(', '')\n",
-    "#     buffer = buffer.replace(')', '')\n",
-    "#     buffer = buffer.replace('<', '')\n",
-    "#     buffer = buffer.replace('>', '')\n",
-    "#     buffer = buffer.replace('|', '')\n",
-    "#     buffer = buffer.replace('\\\"', '')\n",
-    "#     buffer = buffer.replace(',', '')\n",
-    "#     buffer = buffer.replace('=', '')\n",
-    "#     buffer = buffer.replace('#', '')\n",
+    "    buffer = remove_punctuation(buffer)\n",
+    "\n",
+    "    # corner case\n",
     "    buffer = buffer.replace(' i ', ' I ')\n",
     "    buffer = buffer.replace(' i\\' ', ' I\\' ')\n",
     "\n",
-    "    temp = sent_tokenize(buffer)\n",
-    "\n",
-    "    for sent in temp:\n",
-    "        sent = remove_punctuation(sent)\n",
+    "    sent_list = sent_tokenize(buffer)\n",
+    "    for sent in sent_list:\n",
     "        output += \" <s> \" + sent + \" </s> \"\n",
     "\n",
-    "    final = output\n",
-    "    return final\n",
+    "    return output\n",
     "\n",
     "\n",
     "def ntoken_count(n, content):\n",
@@ -208,7 +203,10 @@
     "\n",
     "\n",
     "def main():\n",
-    "    argv = [\"data/autos/train_docs\", \"5\", \"I have\"] # TODO: input\n",
+    "    # TODO: input\n",
+    "    argv = [\"data/autos/train_docs\", \"5\", \"I have\"]\n",
+    "\n",
+    "    # check input\n",
     "    if (len(argv) == 0):\n",
     "        print \"Please input a topic\"\n",
     "\n",
@@ -225,20 +223,20 @@
     "    if not os.path.isdir(outdir):\n",
     "        os.makedirs(outdir)\n",
     "\n",
-    "    # content = preprocess(indir)\n",
-    "    content = preprocess_jiao(indir)\n",
+    "    # preprocess\n",
+    "    content = preprocess(indir)\n",
     "\n",
-    "\n",
+    "    # print sentence generator\n",
     "    for k in xrange(1, n + 1):\n",
     "        print \"\\n\\n[{}-gram]\\n\".format(k)\n",
     "\n",
     "        print \"Empty sentence\"\n",
     "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + sentence_generator(n, content)\n",
+    "            print \"[{}]  \".format(i + 1) + sentence_generator(k, content)\n",
     "\n",
-    "        print \"\\nWith incompelete sentence: \" + \"\\\"{}\\\"\".format(sent_pre)\n",
+    "        print \"\\nWith incomplete sentence: \" + \"\\\"{}\\\"\".format(sent_pre)\n",
     "        for i in xrange(3):\n",
-    "            print \"[{}]  \".format(i + 1) + sentence_generator(n, content, sent_pre)\n",
+    "            print \"[{}]  \".format(i + 1) + sentence_generator(k, content, sent_pre)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
