--- a/pro1/p1_notebook.ipynb
+++ b/pro1/p1_notebook.ipynb
@@ -2,23 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import nltk\n",
-    "import random\n",
-    "import re\n",
-    "import operator\n",
-    "from nltk.tokenize import sent_tokenize, word_tokenize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -32,66 +16,66 @@
       "[1-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  From the content of many of your posts you appear to have a lot of useful information to share with people but it gets overshadowed when you come across as an abusive smart ass\n",
-      "[2]  I value this net group as one where people focus on solving problems and go out of their way to be respectful of differences\n",
-      "[3]  I was wondering if anyone could please tell me what the road rules are in either country with regard to intersections\n",
+      "[1]  You take away all he has and all he s ever gonna have\n",
+      "[2]  Considering you save almost 3 000 dollars for the beretta and the quad 4 is a reliable engine it doesn t make sense to get the integra as a the only person I knew with a gtz had it bought back by gm as a lemon\n",
+      "[3]  180 160 for the beretta\n",
       "\n",
       "With incompelete sentence: \"I have\"\n",
-      "[1]  I have recently purchased within the last 8 months the bel 966stw\n",
-      "[2]  I have also heard that they try to get rid of you if you have an accident\n",
-      "[3]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
+      "[1]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
+      "[2]  I have read that the new 1993 models have a newer improved hp engine\n",
+      "[3]  I have 30 000 as my budget\n",
       "\n",
       "\n",
       "[2-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  And for a good dose of luxury the lexus sc300 is perfect with a manual transmission of course\n",
-      "[2]  In the summer in your 10w40 car\n",
-      "[3]  From all i ve heard from my u\n",
+      "[1]  Swd wan\n",
+      "[2]  Certainly there are tools for the job that are cheaper than an alignment rack that do the job as competently albeit not as swiftly if not more accurate due to the natural pride an owner mechanic places on his work\n",
+      "[3]  Now about large displacement 4s with bad noise\n",
       "\n",
       "With incompelete sentence: \"I have\"\n",
-      "[1]  I have read that the new 1993 models have a newer improved hp engine\n",
-      "[2]  I have no idea how either of my hondas will handle at 100 mph nor do they reach 155\n",
-      "[3]  I have one on both of my cars\n",
+      "[1]  I have seen quite a lot of practise 120k miles and i m used to travel at 130 mph fyi with a car even smaller than a rabbit but I consider driving on the highways round paris or milano really a thrill I strongly suspect you won t find a lot of rabbit owners doing 120mph nearly 200km h on the autobahn but I could be wrong\n",
+      "[2]  I have had all the major brand detectors and imho nothing else even comes close to the v1\n",
+      "[3]  I have a 90 grand am h\n",
       "\n",
       "\n",
       "[3-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  There is one noise that is expecially irritating the back window squeaks\n",
-      "[2]  Anyway you put it you need those fancy scmancy gadgets awww right you want all the home mechanics lined up against a wall and shot eh\n",
-      "[3]  Most that go 130 are built to do it also and can handle the speed\n",
+      "[1]  Let me guess you re from hudson ohio\n",
+      "[2]  Zaphodfrom ha nguyen subject re changing oil by yourself idiots in article mark dean says quit whining on the net about changing your oil yourselves\n",
+      "[3]  The officer said the only reason that you even slowed down in the first place was that you saw me approaching otherwise you would have bombed right through I would like to own\n",
       "\n",
       "With incompelete sentence: \"I have\"\n",
-      "[1]  I have also heard that they try to get rid of tailgaters if you get that rush of testosterone\n",
-      "[2]  I have also heard that they try to get rid of tailgaters if you get that rush of testosterone\n",
-      "[3]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
+      "[1]  I have also heard horror stories about people that have been insured by geico for years and then had 1 accident and were immediately dropped\n",
+      "[2]  I have also heard horror stories about people that have been insured by geico for years and then had 1 accident and were immediately dropped\n",
+      "[3]  I have one on both of my cars\n",
       "\n",
       "\n",
       "[4-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  You always believe those exact numbers why don t you go shoot some kids who are tossing rocks onto cars\n",
-      "[2]  Spiros spiros triantafyllopoulos software technology delco electronics 317 451 0815 gm hughes electronics kokomo in 46904 I post therefore I armm from chun hung wan subject re i m getting a car I need opinions\n",
-      "[3]  Johnson san diego california intermittent newsfeed at best and only to selected groups\n",
+      "[1]  The dealer stated that this is known to happen since honda changed from an asbestos to non asbestos clutch material\n",
+      "[2]  Doug zolmer internet disclaimer my opinions only bell northern research ltd\n",
+      "[3]  But what was the deal with renault s putting the horn on the left hand turn signal stalk\n",
       "\n",
       "With incompelete sentence: \"I have\"\n",
-      "[1]  I have seen them on quite a few cars but I can t find anything more about them in previous r\n",
-      "[2]  I have had all the major brand detectors and imho nothing else even comes close to the v1\n",
-      "[3]  I have been having problems with a slightly different clutch problem on my 90 prelude\n",
+      "[1]  I have been told that most of the us assembly plants for japanese automakers import almost all of the parts used in the vehicles\n",
+      "[2]  I have seen them on quite a few cars but I can t find anything more about them in previous r\n",
+      "[3]  I have always thought it was the exhaust system and not the engine that produced the noise of a car\n",
       "\n",
       "\n",
       "[5-gram]\n",
       "\n",
       "Empty sentence\n",
-      "[1]  So now bel has a new series of detectors out that cover all the usual bands x k ka photo ka wideband as well as the new super ka wideband\n",
-      "[2]  Plenty off highway marginal on the highway\n",
-      "[3]  Any advice on how to buy a land cruiser\n",
+      "[1]  I ve found that clutchless shifting is eaiser quicker at high rpms 4000 7000\n",
+      "[2]  Again extended warranties are ripoff high profit items for the dealer\n",
+      "[3]  Even though many of these models are based on sedan platforms their interior etc\n",
       "\n",
       "With incompelete sentence: \"I have\"\n",
-      "[1]  I have recently purchased within the last 8 months the bel 966stw\n",
-      "[2]  I have also heard that they try to get rid of tailgaters if you get that rush of testosterone\n",
-      "[3]  I have had all the major brand detectors and imho nothing else even comes close to the v1\n"
+      "[1]  I have a 78 alfa spider that needs some engine tranny steering work done\n",
+      "[2]  I have been doing that for that last 50k miles with my lowly civic with no detriment to either the engine or the clutch and getting excellent mpg to boot\n",
+      "[3]  I have seen quite a lot of 89 90 200 quattros not that many wagons though at the dealer lot they use very high quality paint and the entire car is zinc galvanized so it will never rust\n"
      ]
     }
    ],
@@ -101,44 +85,6 @@
     "sentence_maxlen = 100\n",
     "sentence_minlen = 5\n",
     "nprob_dic, nhash_dic, ncounter_dic = {}, {}, {}\n",
-    "\n",
-    "def preprocess(indir):\n",
-    "    # TODO\n",
-    "    # Upper-lower case done\n",
-    "    # temp = sent_tokenize(indir) done\n",
-    "    # output = \"\"\n",
-    "    # delete email done\n",
-    "    # ...\n",
-    "\n",
-    "# def remove_punctuation(text):\n",
-    "# #     pat = re.compile(r\"\\p{P}+\")\n",
-    "#     result = re.findall(r'[\\w]+',text)\n",
-    "#     delim = \" \"\n",
-    "#     return delim.join(result)\n",
-    "\n",
-    "    buffer, output = \"\", \"\"\n",
-    "    for root, dirs, filenames in os.walk(indir):\n",
-    "        for f in filenames:\n",
-    "            raw_content = open(os.path.join(root, f),'r').read()\n",
-    "            buffer += raw_content\n",
-    "    temp = sent_tokenize(buffer)\n",
-    "\n",
-    "    for sent in temp:\n",
-    "        output += \"<s> \" + sent + \" </s> \"\n",
-    "    # final = remove_punctuation(output)\n",
-    "    final = output\n",
-    "    return final\n",
-    "\n",
-    "\n",
-    "def remove_punctuation(text):\n",
-    "#     pat = re.compile(r\"\\p{P}+\")\n",
-    "    result = re.findall(r'[\\w]+',text)\n",
-    "    delim = \" \"\n",
-    "    return delim.join(result)\n",
-    "\n",
-    "def remove_email(text):\n",
-    "    result = re.sub(r'[\\w\\.-]+@[\\w\\.-]+','',text)    \n",
-    "    return result\n",
     "\n",
     "def preprocess_jiao(indir):\n",
     "    buffer, output = \"\", \"\"\n",
@@ -150,6 +96,7 @@
     "    # normalize\n",
     "    buffer = buffer.lower()\n",
     "    buffer = remove_email(buffer)\n",
+    "    buffer = re.sub(r'[\\w\\.-]+@[\\w\\.-]+','',buffer)\n",
     "#     buffer = buffer.replace('-', '')\n",
     "#     buffer = buffer.replace('\\\\', '')\n",
     "#     buffer = buffer.replace('/', '')\n",
@@ -172,8 +119,7 @@
     "    temp = sent_tokenize(buffer)\n",
     "\n",
     "    for sent in temp:\n",
-    "        sent = remove_punctuation(sent)\n",
-    "\n",
+    "        sent = \" \".join(re.findall(r'[\\w]+',sent))\n",
     "        output += \" <s> \" + sent + \" </s> \"\n",
     "\n",
     "    final = output\n",
